Bug Fix
Fixed the height bug where there was extra space outside the html tag.

--- a/Dev/css/frog_log.css
+++ b/Dev/css/frog_log.css
@@ -4,10 +4,6 @@
     font-weight:400;
 }
 
-html {
-    overflow:hidden;
-}
-
 body {
     margin:0;
     padding:0;
